--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>React App</title>
 </head>
 
-<body>
+<body class="bg-gray-900 min-w-full min-h-screen">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
